spacing fix

--- a/src/assets/styles/pages/_index.scss
+++ b/src/assets/styles/pages/_index.scss
@@ -41,12 +41,7 @@ body#index {
     }
 
     section.welcome {
-      padding-top: -20px;
       background-color: $mint;  
-
-      p {
-        margin-top: -40px;
-      }
     }
   }
 
